# svr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  flags.rs  main.rs
