[package]
name = "svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", features = ["std"] }
humantime-serde = "1.1.1"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
toml = "0.7.3"
xflags = "0.3.1"
youtube_dl = { version = "0.8.0", features = ["tokio"] }
